# odoh-client-rs-akamai

./: Cargo.toml
src/: config.rs  dns_utils.rs  main.rs
tests/: config.toml
util/: generate_odohconfig.py
